[project]
name = "cybersecurity-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datetime>=6.0",
    "dnspython>=2.8.0",
    "fastmcp>=3.3.1",
    "python-nmap>=0.7.1",
    "python-whois>=0.9.6",
    "reportlab>=4.5.1",
    "requests>=2.34.2",
    "whois>=1.20240129.2",
]
